update available book commit